--- a/Website/Index.html
+++ b/Website/Index.html
@@ -3,7 +3,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
         <link rel="manifest" href="manifest.json">
         <style>
-            body, html{
+            body,
+            html{
                 font-family: Helvetica, Arial, sans-serif;
                 margin: 0;
                 background: var(--selected-color);
@@ -50,17 +51,17 @@
                 background: transparent;
             }
             input[type="range"]:focus{
-                outline: none;
+                outline: 0;
             }
             input[type="range"]::-webkit-slider-runnable-track{
                 background: var(--ui-color-trans2);
                 height: 5px;
-                margin: 30px 0px;
+                margin: 30px 0;
                 border-radius: 5px;
             }
-            @media (max-height: 540px) {
+            @media (max-height: 540px){
                 input[type="range"]::-webkit-slider-runnable-track{
-                    margin: 10px 0px;
+                    margin: 10px 0;
                 }
             }
             input[type="range"]:hover::-webkit-slider-runnable-track{
@@ -96,18 +97,18 @@
             }
             select{
                 -webkit-appearance: none;
-                background: none;
+                background: 0;
                 color: var(--ui-color);
                 border: solid 1px var(--ui-color);
                 border-radius: 5px;
                 margin: 3px;
                 padding: 2px;
             }
-            select:focus {
-                outline: none;
+            select:focus{
+                outline: 0;
             }
             select,
-            .dropdownFakeValue {
+            .dropdownFakeValue{
                 font-size: 11px;
             }
             .dropdownFakeValue{
@@ -124,7 +125,7 @@
             button{
                 -webkit-appearance: none;
                 background: var(--ui-color);
-                border: none;
+                border: 0;
                 padding: 3px 5px;
                 margin: 3px;
                 border-radius: 5px;
@@ -140,8 +141,8 @@
             let slidersEl = document.getElementById("sliders");
             let settingsContainerEl = document.getElementById("settingsContainer");
             let colorVarsEl = document.getElementById("colorVars");
-            class Slider {
-                constructor(name, forceRgb = true) {
+            class Slider{
+                constructor(name, forceRgb = true){
                     this.name = name;
                     this.containerEl = document.createElement("div");
                     this.containerEl.classList.add("sliderContainer");
@@ -154,34 +155,34 @@
                     this.rangeEl.min = "0";
                     this.rangeEl.max = "255";
                     this.containerEl.appendChild(this.rangeEl);
-                    this.rangeEl.addEventListener("input", (_) => {
+                    this.rangeEl.addEventListener("input", (_) =>{
                         this.update();
                     });
-                    this.rangeEl.addEventListener("change", (_) => {
+                    this.rangeEl.addEventListener("change", (_) =>{
                         setServerState(forceRgb);
                     });
                     this.updateText();
                 }
-                get value() {
+                get value(){
                     return this.rangeEl.value;
                 }
-                set value(v) {
+                set value(v){
                     this.rangeEl.value = v;
                     this.update();
                 }
-                get value01() {
+                get value01(){
                     return this.value / 255;
                 }
-                update() {
+                update(){
                     this.updateText();
                     updateCssColor();
                 }
-                updateText() {
+                updateText(){
                     this.textEl.textContent = this.name + ": " + this.value;
                 }
             }
-            class DropDown {
-                constructor({ name = "", setParamName = "", possibleValues = [], modifySendParams = null } = {}) {
+            class DropDown{
+                constructor({ name = "", setParamName = "", possibleValues = [], modifySendParams = null } ={}){
                     let labelEl = document.createElement("label");
                     labelEl.classList.add("selectLabel");
                     labelEl.textContent = name + ":";
@@ -195,10 +196,10 @@
                     labelEl.appendChild(selectContainer);
                     this.el = document.createElement("select");
                     selectContainer.appendChild(this.el);
-                    this.el.addEventListener("change", (_) => {
+                    this.el.addEventListener("change", (_) =>{
                         this.onChange();
                     });
-                    for (const val of possibleValues) {
+                    for (const val of possibleValues){
                         let optionEl = document.createElement("option");
                         optionEl.value = optionEl.textContent = val;
                         this.el.appendChild(optionEl);
@@ -208,49 +209,49 @@
                     this.fakeValueEl.classList.add("dropdownFakeValue");
                     selectContainer.appendChild(this.fakeValueEl);
                 }
-                async onChange() {
+                async onChange(){
                     this.value = this.el.value;
                     this.el.value = "";
-                    let sendParams = {};
+                    let sendParams ={};
                     sendParams[this.setParamName] = this.value;
-                    if (this.modifySendParams) {
+                    if (this.modifySendParams){
                         let newSendParams = this.modifySendParams(sendParams);
                         if (newSendParams) sendParams = newSendParams;
                     }
                     let success = await sendServerState(sendParams);
-                    if (success) {
+                    if (success){
                         doToastMessage(this.name + " Updated");
                     }
                 }
-                get value() {
+                get value(){
                     return this._value;
                 }
-                set value(v) {
+                set value(v){
                     this._value = v;
                     this.fakeValueEl.textContent = v;
                 }
             }
-            class Button {
-                constructor(label, cb) {
+            class Button{
+                constructor(label, cb){
                     this.el = document.createElement("button");
                     this.el.textContent = label;
                     settingsContainer.appendChild(this.el);
-                    this.el.addEventListener("click", (_) => {
+                    this.el.addEventListener("click", (_) =>{
                         cb();
                     });
                 }
             }
-            class RequestButton extends Button {
-                constructor(label, endpoint, successMessage) {
-                    super(label, async (_) => {
-                        try {
+            class RequestButton extends Button{
+                constructor(label, endpoint, successMessage){
+                    super(label, async (_) =>{
+                        try{
                             let response = await fetch(endpoint);
-                            if (response.ok) {
+                            if (response.ok){
                                 doToastMessage(successMessage);
-                            } else {
+                            } else{
                                 doToastMessage(await response.body(), true);
                             }
-                        } catch (_) {
+                        } catch (_){
                             doToastMessage("Failed to connect", true);
                         }
                     });
@@ -260,31 +261,36 @@
             let redSlider = new Slider("Red");
             let greenSlider = new Slider("Green");
             let blueSlider = new Slider("Blue");
-            let modeDropdown = new DropDown({
+            let DDm = new DropDown({
                 name: "Mode",
                 setParamName: "m",
                 possibleValues: ["OFF", "ON", "WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"],
-                modifySendParams: (oldParams) => {
-                    if (modeDropdown.value == "WIFI") {
+                modifySendParams: (oldParams) =>{
+                    if (DDm.value == "WIFI"){
                         let extraData = this.getServerStateMessageData(true);
-                        return { ...oldParams, ...extraData };
+                        return{ ...oldParams, ...extraData };
                     }
                 },
             });
-            let bootModeDropdown = new DropDown({ name: "Bootmode", setParamName: "bm", possibleValues: ["OFF", "ON", "WIFI", "CLOCK"] });
-            let hourlyAnimDropdown = new DropDown({ name: "Hourly Animation", setParamName: "a", possibleValues: ["FALSE", "TRUE"] });
-			let DoubleModeDropdown = new DropDown({ name: "DoublePressMode", setParamName: "dm", possibleValues: ["WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"] });
-            settingsContainer.appendChild(document.createElement("br"));
-            let otaBtn = new RequestButton("Enable OTA", "/ota", "OTA Enabled");
-            let timeBtn = new RequestButton("Sync Time", "/time", "Time Updated");
-            let resetBtn = new RequestButton("Reset", "/set?m=RESET", "ESP restarting");
-            function updateCssColor() {
-                let r = redSlider.value01 * brightnessSlider.value01 * 255;
-                let g = greenSlider.value01 * brightnessSlider.value01 * 255;
-                let b = blueSlider.value01 * brightnessSlider.value01 * 255;
-				r = Math.pow(r,1/2.2) * 255;
-				g = Math.pow(g,1/2.2) * 255;
-				b = Math.pow(b,1/2.2) * 255;
+            let DDbm = new DropDown({ name: "Bootmode", setParamName: "bm", possibleValues: ["OFF", "ON", "WIFI", "CLOCK"] });
+            let DDdm = new DropDown({ name: "DoublePressMode", setParamName: "dm", possibleValues: ["WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"] });
+			
+			settingsContainer.appendChild(document.createElement("br"));
+			let DDa = new DropDown({ name: "Auto brightness", setParamName: "i", possibleValues: ["FALSE", "TRUE"] });
+			let DDha = new DropDown({ name: "Hourly Animation", setParamName: "a", possibleValues: ["FALSE", "TRUE"] });
+            
+			settingsContainer.appendChild(document.createElement("br"));
+            let Bo = new RequestButton("Enable OTA", "/ota", "OTA Enabled");
+            let Bt = new RequestButton("Sync Time", "/time", "Time Updated");
+            let Br = new RequestButton("Reset", "/set?m=RESET", "ESP restarting");
+
+            function updateCssColor(){
+                let r = redSlider.value01 * brightnessSlider.value01;
+                let g = greenSlider.value01 * brightnessSlider.value01;
+                let b = blueSlider.value01 * brightnessSlider.value01;
+                r = Math.pow(r, 1 / 2.2) * 255;
+                g = Math.pow(g, 1 / 2.2) * 255;
+                b = Math.pow(b, 1 / 2.2) * 255;
                 let selectedColor = `rgb(${r},${g},${b})`;
                 let perceivedBrightness = Math.round((r * 299 + g * 587 + b * 114) / 1000);
                 let uiBrightness = perceivedBrightness > 125 ? 0 : 255;
@@ -292,62 +298,64 @@
                 let uiColor = `rgb(${uiColRGB})`;
                 let uiColorTrans1 = `rgba(${uiColRGB},0.8)`;
                 let uiColorTrans2 = `rgba(${uiColRGB},0.5)`;
-                colorVarsEl.textContent = `:root{--selected-color: ${selectedColor};--ui-color: ${uiColor};--ui-color-trans1: ${uiColorTrans1};--ui-color-trans2: ${uiColorTrans2};}`;
+                colorVarsEl.textContent = `:root{--selected-color:${selectedColor};--ui-color:${uiColor};--ui-color-trans1:${uiColorTrans1};--ui-color-trans2:${uiColorTrans2};}`;
             }
+
             updateCssColor();
-            async function getServerState() {
+            async function getServerState(){
                 let response = await fetch("/get");
                 await updateServerStateFromResponse(response);
             }
             getServerState();
-            setInterval(async (_) => {
+            setInterval(async (_) =>{
                 getServerState();
             }, 10 * 1000);
-            function getServerStateMessageData(forceRgb = true) {
-                let state = { l: brightnessSlider.value };
-                if (modeDropdown.value == "WIFI" || forceRgb) {
-                    state = { ...state, r: redSlider.value, g: greenSlider.value, b: blueSlider.value };
+            function getServerStateMessageData(forceRgb = true){
+                let state ={ l: brightnessSlider.value };
+                if (DDm.value == "WIFI" || forceRgb){
+                    state ={ ...state, r: redSlider.value, g: greenSlider.value, b: blueSlider.value };
                 }
                 return state;
             }
-            async function setServerState(forceRgb = true) {
+            async function setServerState(forceRgb = true){
                 let state = getServerStateMessageData(forceRgb);
                 await sendServerState(state);
             }
-            async function sendServerState(params, endPoint = "/set") {
+            async function sendServerState(params, endPoint = "/set"){
                 let searchParams = new URLSearchParams(params);
-                try {
+                try{
                     let response = await fetch(endPoint + "?" + searchParams);
-                    if (response.ok) {
+                    if (response.ok){
                         await updateServerStateFromResponse(response);
                         return true;
-                    } else {
+                    } else{
                         doToastMessage(await response.body(), true);
                     }
-                } catch (e) {
+                } catch (e){
                     doToastMessage("Failed to connect", true);
                 }
             }
-            async function updateServerStateFromResponse(response) {
+            async function updateServerStateFromResponse(response){
                 if (!response.ok) return;
                 let json = await response.json();
-                modeDropdown.value = json.M;
-                bootModeDropdown.value = json.BM;
-                hourlyAnimDropdown.value = json.HA;
-				DoubleModeDropdown.value = json.DM;
+                DDm.value = json.M;
+                DDbm.value = json.BM;
+                DDha.value = json.HA;
+                DDdm.value = json.DM;
+                DDa.value = json.A;
                 let col = json.RGBL[0];
                 redSlider.value = col.R;
                 greenSlider.value = col.G;
                 blueSlider.value = col.B;
                 brightnessSlider.value = col.L;
             }
-            async function timeout(ms) {
+            async function timeout(ms){
                 await new Promise((r) => setTimeout(r, ms));
             }
-            function recalculateStyle(elem) {
+            function recalculateStyle(elem){
                 window.getComputedStyle(elem).getPropertyValue("top");
             }
-            async function doToastMessage(message, error = false) {
+            async function doToastMessage(message, error = false){
                 let el = document.createElement("div");
                 el.classList.add("toast", "hidden");
                 el.classList.toggle("error", error);
@@ -360,7 +368,7 @@
                 await timeout(200);
                 el.parentElement.removeChild(el);
             }
-            async function installSw() {
+            async function installSw(){
                 if (!("serviceWorker" in window.navigator)) return;
                 await navigator.serviceWorker.register("sw.js");
             }
