--- a/Website/Index.html
+++ b/Website/Index.html
@@ -22,19 +22,20 @@
                 margin: 30px 0;
                 text-align: center;
             }
-            .toast{
+            .slideIn{
                 position: absolute;
-                right: 0;
-                top: 0;
+                border-radius: 5px;
+                box-shadow: 2px 2px var(--ui-color-trans2);
+                transition: opacity 0.2s, transform 0.2s;
                 background: var(--selected-color);
                 border: 1px solid var(--ui-color);
+            }
+            .toast{
+                right: 0;
+                top: 0;
                 font-size: 14pt;
                 margin: 30px;
                 padding: 10px;
-                border-radius: 5px;
-                box-shadow: 2px 2px var(--ui-color-trans2);
-                will-change: transform;
-                transition: opacity 0.2s, transform 0.2s;
             }
             .toast.error{
                 background: #ff5026;
@@ -81,15 +82,48 @@
                 height: 30px;
                 margin-top: -12.5px;
             }
+            #curtain{
+                position: absolute;
+                left: 0;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                z-index: 100;
+                background: #00000082;
+                opacity: 1;
+                transition: opacity 0.2s;
+            }
+            #curtain.hidden{
+                opacity: 0;
+                pointer-events: none;
+            }
             #settingsContainer{
                 position: absolute;
-                bottom: 0;
-                padding-bottom: 20px;
-                width: 100%;
+                width: 90%;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
                 text-align: center;
+                z-index: 150;
+            }
+            #settingsContainer.hidden{
+                transform: translate(-50%, calc(-50% - 10px));
+                opacity: 0;
+                pointer-events: none;
+            }
+            #settingsBtn{
+                bottom: 0;
+                right: 0;
+                position: absolute;
+                background: url(settings.svg);
+                width: 30px;
+                height: 30px;
+                margin: 10px;
+                cursor: pointer;
             }
             .selectLabel{
                 margin: 5px;
+                display: block;
             }
             .selectContainer{
                 display: inline-block;
@@ -136,10 +170,25 @@
     </head>
     <body>
         <div id="sliders"></div>
-        <div id="settingsContainer"></div>
+        <div id="curtain" class="hidden"></div>
+        <div id="settingsContainer" class="slideIn hidden"></div>
+        <svg viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" id="settingsBtn">
+          <defs>
+            <mask id="mask">
+              <g>
+                <path d="M10 31.5 L2 29 L2 21 L10 18.5        L6 11 L11 6      L18.5 10 L21 2 L29 2 L31.5 10     L39 6 L44 11     L40 18.5 L48 21 L48 29 L40 31.5   L44 39 L39 44        L31.5 40 L29 48 L21 48 L18.5 40    L11 44 L6 39" fill="white"/>
+                <circle cx="25" cy="25" r="18" fill="white"/>
+                <circle cx="25" cy="25" r="10" fill="black"/>
+              </g>
+            </mask>
+          </defs>
+          <rect x="0" y="0" width="100" height="100" mask="url(#mask)" style="fill: var(--ui-color);"/>
+        </svg>
         <script>
             let slidersEl = document.getElementById("sliders");
+            let curtainEl = document.getElementById("curtain");
             let settingsContainerEl = document.getElementById("settingsContainer");
+            let settingsBtn = document.getElementById("settingsBtn");
             let colorVarsEl = document.getElementById("colorVars");
             class Slider{
                 constructor(name, forceRgb = true){
@@ -274,15 +323,22 @@
             });
             let DDbm = new DropDown({ name: "Bootmode", setParamName: "bm", possibleValues: ["OFF", "ON", "WIFI", "CLOCK"] });
             let DDdm = new DropDown({ name: "DoublePressMode", setParamName: "dm", possibleValues: ["WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"] });
-			
-			settingsContainer.appendChild(document.createElement("br"));
-			let DDa = new DropDown({ name: "Auto brightness", setParamName: "i", possibleValues: ["FALSE", "TRUE"] });
-			let DDha = new DropDown({ name: "Hourly Animation", setParamName: "a", possibleValues: ["FALSE", "TRUE"] });
-            
-			settingsContainer.appendChild(document.createElement("br"));
+
+            settingsContainer.appendChild(document.createElement("br"));
+            let DDa = new DropDown({ name: "Auto brightness", setParamName: "i", possibleValues: ["FALSE", "TRUE"] });
+            let DDha = new DropDown({ name: "Hourly Animation", setParamName: "a", possibleValues: ["FALSE", "TRUE"] });
+
+            settingsContainer.appendChild(document.createElement("br"));
             let Bo = new RequestButton("Enable OTA", "/ota", "OTA Enabled");
             let Bt = new RequestButton("Sync Time", "/time", "Time Updated");
             let Br = new RequestButton("Reset", "/set?m=RESET", "ESP restarting");
+
+            curtainEl.addEventListener("click", _ => this.setSettingsVisibility(false));
+            settingsBtn.addEventListener("click", _ => this.setSettingsVisibility(true));
+            function setSettingsVisibility(visible){
+                curtainEl.classList.toggle("hidden", !visible);
+                settingsContainerEl.classList.toggle("hidden", !visible);
+            }
 
             function updateCssColor(){
                 let r = redSlider.value01 * brightnessSlider.value01;
@@ -357,7 +413,7 @@
             }
             async function doToastMessage(message, error = false){
                 let el = document.createElement("div");
-                el.classList.add("toast", "hidden");
+                el.classList.add("toast", "slideIn", "hidden");
                 el.classList.toggle("error", error);
                 el.textContent = message;
                 document.body.appendChild(el);
