--- a/Website/Index.html
+++ b/Website/Index.html
@@ -31,6 +31,7 @@
                 border: 1px solid var(--ui-color);
             }
             .toast{
+                z-index: 160;
                 right: 0;
                 top: 0;
                 font-size: 14pt;
