--- a/Website/Index.html
+++ b/Website/Index.html
@@ -213,7 +213,7 @@
             let settingsBtn = document.getElementById('settingsBtn');
             let colorVarsEl = document.getElementById('colorVars');
             class Slider {
-                constructor(name, forceRgb=true) {
+                constructor(name, isBrightness=false) {
                     this.name = name;
                     this.containerEl = document.createElement('div');
                     this.containerEl.classList.add('sliderContainer');
@@ -231,7 +231,7 @@
                     }
                     );
                     this.rangeEl.addEventListener('change', (_)=>{
-                        setServerState(forceRgb);
+                        setServerState(isBrightness);
                     }
                     );
                     this.updateText();
@@ -342,7 +342,7 @@
                     );
                 }
             }
-            let Sl = new Slider('Brightness',false);
+            let Sl = new Slider('Brightness',true);
             let Sr = new Slider('Red');
             let Sg = new Slider('Green');
             let Sb = new Slider('Blue');
@@ -352,7 +352,7 @@
                 possibleValues: ['OFF', 'ON', 'WIFI', 'CLOCK', 'BLINK', 'BPM', 'CONFETTI', 'FLASH', 'GLITTER', 'JUGGLE', 'MOVE', 'RAINBOW', 'SINELON', 'SINELON2'],
                 modifySendParams: (oldParams)=>{
                     if (Dm.value == 'WIFI') {
-                        let extraData = this.getServerStateMessageData(true);
+                        let extraData = this.getServerStateMessageData();
                         return {
                             ...oldParams,
                             ...extraData
@@ -444,22 +444,20 @@
                 getServerState();
             }
             , 10 * 1000);
-            function getServerStateMessageData(forceRgb=true) {
-                let state = {
-                    l: Sl.value
-                };
-                if (Dm.value == 'WIFI' || forceRgb) {
-                    state = {
-                        ...state,
-                        r: Sr.value,
-                        g: Sg.value,
-                        b: Sb.value
-                    };
+            function getServerStateMessageData(cameFromBrightness=false) {
+                const state = {};
+                if (Di.value != 'TRUE' || cameFromBrightness) {
+                    state.l = Sl.value;
+                }
+                if (Dm.value == 'WIFI' || !cameFromBrightness) {
+                    state.r = Sr.value;
+                    state.g = Sg.value;
+                    state.b = Sb.value;
                 }
                 return state;
             }
-            async function setServerState(forceRgb=true) {
-                let state = getServerStateMessageData(forceRgb);
+            async function setServerState(cameFromBrightness=false) {
+                let state = getServerStateMessageData(cameFromBrightness);
                 await sendServerState(state);
             }
             async function sendServerState(params, endPoint='/set') {
