--- a/Website/Index.html
+++ b/Website/Index.html
@@ -154,14 +154,20 @@
                 margin: 0px 8px;
             }
 
+            .taskTime{
+                width: 80px;
+                position: relative;
+            }
             .taskTime::after{
                 content: ' ';
                 background: black;
                 width: 1px;
                 height: 23px;
                 display: inline-block;
-                margin-left: 10px;
-                vertical-align: middle;
+                right: 0px;
+                top: 50%;
+                position: absolute;
+                transform: translateY(-50%);
             }
 
             .taskCloseBtn{
@@ -247,11 +253,7 @@
         <div id="curtain" class="hidden"></div>
         <div id="settingsContainer" class="popup slideIn hidden"></div>
         <div id="tasksContainer" class="popup slideIn hidden">
-            <ul id="taskList">
-                <li class="taskItem"><div class="taskTime">4:00:00</div><div class="taskType">SYNCTIME</div><div class="taskVar">Var: CLOCK</div><div class="taskCloseBtn"></div></li>
-                <li class="taskItem"><div class="taskTime">3:22:16</div><div class="taskType">SYNCTIME</div><div class="taskVar"></div>          <div class="taskCloseBtn"></div></li>
-                <li class="taskItem"><div class="taskTime">5:23:12</div><div class="taskType">SYNCTIME</div><div class="taskVar">Var: OFF</div>  <div class="taskCloseBtn"></div></li>
-            </ul>
+            <ul id="taskList"></ul>
         </div>
         <svg viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" id="settingsBtn">
             <defs>
@@ -270,6 +272,7 @@
             let curtainEl = document.getElementById('curtain');
             let settingsContainerEl = document.getElementById('settingsContainer');
             let tasksContainerEl = document.getElementById('tasksContainer');
+            let taskListEl = document.getElementById('taskList');
             let settingsPopupVisible = false;
             let tasksPopupVisible = false;
             let settingsBtn = document.getElementById('settingsBtn');
@@ -485,6 +488,7 @@
                 tasksPopupVisible = visible;
                 tasksContainerEl.classList.toggle('hidden', !visible);
                 updateCurtainEl();
+                updateTaskList();
             }
             function updateCurtainEl(){
                 const visible = settingsPopupVisible || tasksPopupVisible;
@@ -553,8 +557,7 @@
                 }
             }
             async function updateServerStateFromResponse(response) {
-                if (!response.ok)
-                    return;
+                if (!response.ok) return;
                 let json = await response.json();
                 Dm.value = json.m;
                 Dbm.value = json.bm;
@@ -570,6 +573,79 @@
                 Sb.value = col.B;
                 Sl.value = col.L;
             }
+            async function updateTaskList(){
+                let response = await fetch('/taskList');
+                if (response.ok) {
+                    await updateTaskListFromResponse(response);
+                } else {
+                    doToastMessage(await response.text(), true);
+                }
+            }
+            let currentTaskListTimeItems = [];
+            async function updateTaskListFromResponse(response) {
+                if(!response.ok) return;
+                const json = await response.json();
+                taskListEl.innerHTML = '';
+                currentTaskListTimeItems = [];
+                for(const task of json.tasks){
+                    const liEl = document.createElement('li');
+                    liEl.classList.add('taskItem');
+                    taskListEl.appendChild(liEl);
+
+                    const timeEl = document.createElement('div');
+                    timeEl.classList.add('taskTime');
+                    timeEl.innerText = task.time;
+                    liEl.appendChild(timeEl);
+
+                    if(task.timeFromNow){
+                        currentTaskListTimeItems.push({
+                            el: timeEl,
+                            fireTime: performance.now() + task.timeFromNow,
+                        });
+                    }
+
+                    const typeEl = document.createElement('div');
+                    typeEl.classList.add('taskType');
+                    typeEl.innerText = task.type;
+                    liEl.appendChild(typeEl);
+
+                    const varEl = document.createElement('div');
+                    varEl.classList.add('taskVar');
+                    if(task.var){
+                        varEl.innerText = "Var: "+task.var;
+                    }
+                    liEl.appendChild(varEl);
+
+                    const closeBtn = document.createElement('div');
+                    closeBtn.classList.add('taskCloseBtn');
+                    liEl.appendChild(closeBtn);
+                }
+            }
+            function updateTaskTimes(){
+                for(const timeItem of currentTaskListTimeItems){
+                    const dt = timeItem.fireTime - performance.now();
+                    let str = '';
+                    if(dt < 0){
+                        str = 'now';
+                    }else{
+                        const dtSeconds = dt/1000;
+                        const dtMinutes = dtSeconds/60;
+                        const dtHours = dtMinutes/60;
+                        const hours = Math.floor(dtHours);
+                        const minutes = Math.floor(dtMinutes - hours*60);
+                        const seconds = Math.floor(dtSeconds - hours*60*60 - minutes*60);
+                        str = (''+seconds).padStart(2,'0');
+                        if(hours > 0){
+                            str = (''+minutes).padStart(2,'0') + ':' + str;
+                            str = hours + ':' + str;
+                        }else{
+                            str = minutes + ':' + str;
+                        }
+                    }
+                    timeItem.el.textContent = str;
+                }
+            }
+            setInterval(updateTaskTimes, 100);
             async function timeout(ms) {
                 await new Promise((r)=>setTimeout(r, ms));
             }
@@ -590,11 +666,12 @@
                 el.parentElement.removeChild(el);
             }
             async function installSw() {
-                if (!('serviceWorker'in window.navigator))
-                    return;
+                if (!('serviceWorker'in window.navigator)) return;
                 await navigator.serviceWorker.register('sw.js');
             }
             installSw();
+
+            setTasksVisibility(true);
         </script>
     </body>
 </html>
