fix error after minifying client js

--- a/Website/Index.html
+++ b/Website/Index.html
@@ -505,8 +505,8 @@
             new LinkButton('Info','/info');
             new LinkButton('Saved settings','/ip');
             curtainEl.addEventListener('click', _=>{
-                this.setSettingsVisibility(false)
-                this.setTasksVisibility(false)
+                this.setSettingsVisibility(false);
+                this.setTasksVisibility(false);
             });
             settingsBtn.addEventListener('click', _=>this.setSettingsVisibility(true));
             function setSettingsVisibility(visible) {
