--- a/Website/Index.html
+++ b/Website/Index.html
@@ -654,7 +654,7 @@
                     const closeBtn = document.createElement('div');
                     closeBtn.classList.add('taskCloseBtn');
                     liEl.appendChild(closeBtn);
-                        const response = await fetch('/removeTask?id='+task.id);
+                        const response = await fetch('/removeTask?o=2&i='+task.id);
                     closeBtn.addEventListener('click', async _=>{
                         if (!response.ok)
                             doToastMessage(await response.text(), true);
@@ -703,7 +703,7 @@
                 }
                 let searchParams = new URLSearchParams(params);
                 try {
-                    let response = await fetch('/createTask?' + searchParams);
+                    let response = await fetch('/createTask?o=1&' + searchParams);
                     doToastMessage(await response.text(), !response.ok);
                 } catch (e) {
                     doToastMessage('Failed to add task', true);
