fix remove task button color not changing with the rest of the ui (#31)

--- a/Website/Index.html
+++ b/Website/Index.html
@@ -200,7 +200,7 @@
 
             .taskCloseBtn::before,.taskCloseBtn::after {
                 content: '';
-                background: black;
+                background: var(--ui-color);
                 width: 2px;
                 height: 25px;
                 display: block;
