--- a/Website/Index.html
+++ b/Website/Index.html
@@ -656,8 +656,7 @@
                     liEl.appendChild(closeBtn);
                     closeBtn.addEventListener('click', async _=>{
                         const response = await fetch('/settask?o=2&i='+task.id);
-                        if (!response.ok)
-                            doToastMessage(await response.text(), true);
+                        doToastMessage(await response.text(), !response.ok);
                         await updateTaskList();
                     }
                     );
